test/sema/methods/ptr_receiver_no_coercion.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
trait Foo {
  fn foo(self: *Self) {}
  fn bar(self: *mut Self) {}
}

struct S {
  impl Foo;
}

fn main() {
  let s = S{};

  // CHECK: [[# @LINE + 1 ]]:5: error: cannot unify 'S' with '*S'
  s.foo();

  // CHECK: [[# @LINE + 1 ]]:5: error: cannot unify 'S' with '*mut S'
  s.bar();
}
